<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">FIRST</string>
    <string name="last_name">LAST</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">This a short bio about myself.\nIt has multiple lines because I am\na complex being.</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 FIRST HOBBY</string>
    <string name="profile_hobby_second_text">🥈 SECOND HOBBY</string>
    <string name="profile_hobby_third_text">🥉 THIRD HOBBY</string>
    <string name="sleeping">🥈 Sleeping 💤</string>
    <string name="going_to_the_gym">🥇 Going to the Gym 🏋️‍♀️</string>
    <string name="thrifting">🥉 Thrifting 🧥</string>
    <string name="senior_michigan_state_university_nstudying_computer_sicence_with_a_nminor_in_entrepeneurship_and_business_nfinance_chair_of_nsbe_msu_asu_treauserer">Senior @ Michigan State University ️🟩⬜ \nStudying Computer Sicence with a 📚 \nMinor in Entrepeneurship and Business 💼 \nFinance Chair of NSBE MSU, ASU Treauserer 🤑</string>
</resources>