<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@color/card_foreground"
        app:cardCornerRadius="70dp"
        android:elevation="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_foreground">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp"
                android:src="@drawable/avatar_13"
                android:background="@color/card_foreground"
                />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                tools:text="Naseeb Bello"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:background="@color/card_foreground"
                />

            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_name"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/senior_michigan_state_university_nstudying_computer_sicence_with_a_nminor_in_entrepeneurship_and_business_nfinance_chair_of_nsbe_msu_asu_treauserer"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/profile_hobby_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_bio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:text="@string/profile_hobby_header_text"
                android:textSize="18sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/profile_hobby_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_hobby_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/sleeping"
                android:textColor="@color/black"
                android:background="@color/silver"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/profile_hobby_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_hobby_first"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:text="@string/going_to_the_gym"
                android:background="@color/gold"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/profile_hobby_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_hobby_second"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:text="@string/thrifting"
                android:background="@color/bronze"
                android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>